Introduce scripted SBT plugin testing (#96)